2004/05/29 01:28 (+0200) pcg

	Merge from HEAD:

        * xs/GtkTextBuffer.xs: Allow creation of anonymous marks.
        * xs/GdkColor.xs: scaling by 257 is better than scaling by 8.

2004/04/25 13:25 (+0200) kaffeetisch

	Merge from HEAD:

	* t/GdkDisplay.t: Add a reference to the relevant bug to the FIXME
	comment on close().

	* t/GtkDnd.t: Check that $context is defined before using it.

2004/04/19 20:10 (+0200) kaffeetisch

	Merge from HEAD:

	* pm/SimpleList.pm: Add parameter descriptions for pretty much
	every method.

	* xs/Gdk.xs: Remove a needless MODULE line.

	* xs/PangoFont.xs: Add some apidoc.

2004/04/14 19:44 (+0200) kaffeetisch

	Merge from HEAD:

	* AUTHORS: Add Nathan Kurz.

	* t/GdkKeys.t: Don't test the same variable three times.

	* xs/GdkKeys.xs: Whitespace fix.

	* xs/PangoFont.xs: Don't warn about unregistered subclasses of
	PangoFontFamily.  Rearrange the loop in
	pango_font_family_list_faces.

2004/04/12 00:10 (-0400) muppetman

	* Gtk2.pm, NEWS, README: stable release 1.042

2004/04/12 00:05 (-0400) muppetman

	* t/GtkComboBox.t, t/GtkCellLayout.t: hush nastygrams that result
	from gtk+ not checking for NULL before unreffing the model in
	combobox's finalizer.

2004/04/11 23:36 (-0400) muppetman

	* t/GdkEvent.t: hush a critical warning that comes from trying to
	unref a NULL pointer

2004/04/12 01:32 (+0200) kaffeetisch

	* CodeGen.pm
	* pm/SimpleList.pm
	* pm/SimpleMenu.pm
	* pm/TestHelper.pm: Some documentation fixes and additions.

2004/04/10 00:21 (-0400) muppetman

	* AUTHORS, pm/SimpleList.pm: SimpleList documentation fixes from
	Jason Stirling.

2004/04/09 07:56 (-0400) muppetman

	* gtk-demo/appwindow.pl: remove unsightly warnings
 
	* gtk-demo/sizegroup.pl, gtk-demo/textview.pl: patch from Thierry
	fixes my stupid syntax errors so gtk-demo works again.

2004/04/09 00:30 (-0400) muppetman

	* Gtk2.pm, NEWS, README: stable release 1.041

2004/04/08 23:58 (-0400) muppetman
