@@ -1,3 +1,15 @@
+2004/05/29 16:24 (+0200) kaffeetisch
+
+	More merges from HEAD:
+
+	* Makefile.PL: Check for the correct versions of EU::Depends and
+	EU::PkgConfig.
+
+	* t/GdkEvent.t: Be a bit more tolerant to pass on older gtk+'s.
+
+	* t/GtkFontSelection.t: Convert font name to lowercase before
+	testing.
+
 2004/05/29 01:28 (+0200) pcg
 
 	Merge from HEAD:
